projeto-salesforce/force-app/main/default/objects/Equipamento__c/Equipamento__c.object-meta.xml
<CustomObject>
    <label>Equipamento</label>
    <nameField>
        <label>Nome do Equipamento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipamentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>