projeto-salesforce/force-app/main/default/objects/Equipamento__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Equipamentos</relationshipLabel>
    <relationshipName>Equipamentos</relationshipName>
    <type>Lookup</type>
</CustomField>