projeto-salesforce/force-app/main/default/objects/Equipamento__c/fields/Data_Instalacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Instalacao__c</fullName>
    <label>Data_Instalacao</label>
    <type>Date</type>
</CustomField>