projeto-salesforce/force-app/main/default/objects/Equipamento__c/fields/Numero_Serie__c.field-meta.xml
<CustomField>
    <fullName>Numero_Serie__c</fullName>
    <label>Numero_Serie</label>
    <length>30</length>
    <type>Text</type>
</CustomField>