projeto-salesforce/force-app/main/default/objects/Equipamento__c/fields/Tipo_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Equipamento__c</fullName>
    <label>Tipo_Equipamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ar-Condicionado</fullName>
            </value>
            <value>
                <fullName>Elevador</fullName>
            </value>
            <value>
                <fullName>Máquina Industrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>